--- a/TODO
+++ b/TODO
@@ -7,7 +7,11 @@
 
    This is actually an error on 32 bit machines - the default return type
    int is not large enough to hold the 64 bit result.
+
+   This is fixed in ghc 6.9; the compiler emits its own prototypes.
 Check sequences are repeatable
-check behaviour on 32 bits
+Investigate slow conversion to Double (x86 at least)
+   looking at the core, the conversion goes through toInteger and encodeFloat.
+   That's a pity, because the FPU has an instruction for this purpose.
 profile/benchmark
 tests driver
